# Gravate-single-page

Backend/: .dockerignore  .gitignore  Dockerfile  README.md  REQUIREMENTS.md  RUN_GUIDE.md  add_sample_data.py  dev-start.bat  docker-compose.yml  docker-start.bat  docker-start.sh  docker-stop.bat  docker-stop.sh  env.example  init.sql  list_endpoints.py  main.py  migrate_player_to_team.py  pyproject.toml  quick_fix.bat  requirements-dev.txt  requirements-docker.txt  requirements-prod.txt  requirements.txt  setup.bat  start.bat  test_backend.py  test_migration.py  verify_setup.bat  view_endpoints.bat
Backend/alembic/: env.py
Backend/app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
Backend/app/api/: endpoints.py
Backend/core/: config.py  security.py
Backend/models/: __init__.py  match.py
Backend/routes/: match.py
Backend/schemas/: __init__.py  match.py
Backend/services/: match_service.py
gravate-cxo-pickleball-main/: README.md  index.html  tailwind.config.ts
gravate-cxo-pickleball-main/src/: App.tsx  README.md  index.css
gravate-cxo-pickleball-main/src/components/ui/: button.tsx
gravate-cxo-pickleball-main/src/pages/: About.tsx  Contact.tsx  CxoLeague.tsx  Events.tsx  Gallery.tsx  Home.tsx
gravate-cxo-pickleball-main/src/types/: events.ts  tournament.ts
score-sheet-hero/: README.md  index.html  tailwind.config.ts
score-sheet-hero/src/: App.tsx  index.css
score-sheet-hero/src/components/: Navigation.tsx  RealTimeScoring.tsx
score-sheet-hero/src/pages/: Index.tsx  MatchEntry.tsx
score-sheet-hero/src/services/: api.ts
(+13 files in other folders)
